Fix mobile spacing inconsistency + grammar in French

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -966,6 +966,7 @@ blockquote {
 
     #home-cta {
         grid-template-columns: 1fr;
+        margin-top: 20px !important;
     }
 }
 
